# assistant

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/assistant/: __main__.py  config.py  logger.py
src/assistant/audio/: __init__.py  devices.py  dsp.py  manager.py  models.py  player.py  protocol.py  recorder.py  ring_buffer.py  utterance.py
src/assistant/brain/: gigachat.py
src/assistant/constants/: overlay.py
src/assistant/core/: __init__.py  application.py  pipeline.py
src/assistant/overlay/: __init__.py  window.py
src/assistant/overlay/assets/live2d/: NOTICE.txt
src/assistant/stt/: __init__.py  exceptions.py  models.py  protocol.py  whisper.py
src/assistant/tools/: specs.py
src/assistant/tts/: __init__.py  edge.py  exceptions.py  protocol.py
src/assistant/wake/: __init__.py  exceptions.py  models.py  protocol.py  whisper.py
