[project]
name = "assistant"
version = "0.1.0"
description = "Lightweight local voice assistant"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "numpy>=2.5.1",
    "sounddevice>=0.5.5",
    "faster-whisper>=1.2.1",
    "edge-tts>=7.2.8",
    "miniaudio>=1.71",
    "gigachat>=0.2.1",
    "tzdata>=2026.3",
    "python-dotenv>=1.2.2",
    "live2d-py>=0.7.0.4",
    "pygame>=2.6.0",
]

[project.scripts]
assistant = "assistant.__main__:main"

[dependency-groups]
dev = [
    "mypy>=1.18.1",
    "pre-commit>=4.6.0",
    "ruff>=0.15.20",
]

[tool.uv]
package = true

[tool.ruff]
target-version = "py313"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "B",
    "C4",
    "E",
    "F",
    "I",
    "RUF",
    "SIM",
    "UP",
    "W",
]

ignore = ["RUF001"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

[tool.mypy]
python_version = "3.13"
strict = true
pretty = true
show_error_codes = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "sounddevice.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "faster_whisper.*",
    "ctranslate2.*",
    "edge_tts.*",
    "miniaudio.*",
    "gigachat.*",
    "live2d.*",
    "pygame.*",
    "OpenGL.*",
]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel.force-include]
"src/assistant/overlay/assets" = "assistant/overlay/assets"
